--- a/ko/styles/pdf.css
+++ b/ko/styles/pdf.css
@@ -1,3 +1,7 @@
+body {
+    font-family: "Noto Sans", "Noto Sans CJK KR", sans-serif !important;
+}
+
 .danger {
     background-color: #ffdddd;
     border-left: 8px solid #f44336;
@@ -91,7 +95,7 @@ td img {
 
 img {
   padding: 10px;
-  margin: 2px 2px 2px 2px;  
+  margin: 2px 2px 2px 2px;
   -moz-box-shadow:    3px 3px 10px 3px #ccc;
   -webkit-box-shadow: 3px 3px 10px 3px #ccc;
   box-shadow:         3px 3px 10px 3px #ccc;
